@@ -5,13 +5,16 @@ import org.myshelfie.model.commonGoal.*;
 import java.util.*;
 import java.util.stream.Collectors;
 
+/**
+ * Deck containing all the CommonGoalCards. It is a singleton, thus its constructor is private.
+ */
 public final class CommonGoalDeck {
 
     private static CommonGoalDeck single_istance = null;
-    private List<CommonGoalCard> deck;
+    private final List<CommonGoalCard> deck;
 
     /**
-     * Initialize the deck list so that it contains all CommonGoalCards
+     * Initialize the deck list so that it contains all CommonGoalCards.
      */
     private CommonGoalDeck() {
         this.deck = new ArrayList<>();
@@ -29,19 +32,28 @@ public final class CommonGoalDeck {
         this.deck.add(new StairTiles("12"));
     }
 
+    /**
+     * Get the instance of the CommonGoalDeck, creating it if it does not exist.
+     * @return the instance of the CommonGoalDeck
+     */
     public static synchronized CommonGoalDeck getInstance() {
         if (single_istance == null)
             single_istance = new CommonGoalDeck();
         return single_istance;
     }
 
+    /**
+     * Get an x-long list of CommonGoalCards, drawn randomly from the deck without repetitions.
+     * Drawn cards are not removed from the deck.
+     * @param x the number of cards to draw
+     * @return the list of drawn cards
+     */
     public List<CommonGoalCard> drawCommonGoalCard(int x) {
-        List<CommonGoalCard> drawnCards = new ArrayList<CommonGoalCard>();
+        List<CommonGoalCard> drawnCards = new ArrayList<>();
         List<Integer> positions= new Random().ints(0, deck.size())
                 .distinct()
                 .limit(x)
-                .boxed()
-                .collect(Collectors.toList());
+                .boxed().toList();
         for(Integer i: positions) {
             drawnCards.add(deck.get(i));
         }
